<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_objects"
            android:icon="@drawable/ic_devices_black_24dp"
            android:title="@string/menu_objects" />
        <item
            android:id="@+id/nav_query"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_query" />
        <item
            android:id="@+id/nav_scenario"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/menu_scenario" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_more_vert_black_24dp"
            android:title="@string/menu_help" />
    </group>

</menu>
