<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.emse.com.cps2_android_app.QueryActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <TextView
                    android:id="@+id/titleTarget"
                    android:layout_width="wrap_content"
                    android:layout_height="31dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="80dp"
                    android:text="@string/targets"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/firstLevelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/select_1st_level"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleTarget" />

                <Spinner
                    android:id="@+id/buildingSpinner"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/firstLevelText" />

                <TextView
                    android:id="@+id/secondLevelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/select_2nd_level"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buildingSpinner" />

                <Spinner
                    android:id="@+id/floorSpinner"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/secondLevelText" />

                <TextView
                    android:id="@+id/thirdLevelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/select_3rd_level"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/floorSpinner" />

                <Spinner
                    android:id="@+id/roomSpinner"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/thirdLevelText" />

                <TextView
                    android:id="@+id/fourthLevelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/select_4th_level"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/roomSpinner" />

                <Spinner
                    android:id="@+id/objectTypeSpinner"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fourthLevelText" />

                <TextView
                    android:id="@+id/fifthLevelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/select_5th_level"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/objectTypeSpinner" />

                <Spinner
                    android:id="@+id/objectNameSpinner"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fifthLevelText" />

                <TextView
                    android:id="@+id/titleAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/action_title"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/objectNameSpinner" />

                <RadioGroup
                    android:id="@+id/requestTypeGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleAction">
                    <RadioButton
                        android:id="@+id/radioButtonRequest"
                        android:onClick="onRadioButtonClicked"
                        android:checked="true"
                        android:layout_width="108dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="68dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/request_button" />

                    <RadioButton
                        android:id="@+id/radioButtonChange"
                        android:onClick="onRadioButtonClicked"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginStart="52dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/change_button" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/parameterTypeGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/requestTypeGroup">
                    <RadioButton
                        android:id="@+id/radioButtonConfig"
                        android:onClick="onRadioButtonClicked"
                        android:checked="true"
                        android:layout_width="108dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="68dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/config_button"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/requestTypeGroup" />

                    <RadioButton
                        android:id="@+id/radioButtonField"
                        android:onClick="onRadioButtonClicked"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="52dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/field_button"
                        app:layout_constraintStart_toEndOf="@+id/radioButtonConfig"
                        app:layout_constraintTop_toBottomOf="@+id/requestTypeGroup" />
                </RadioGroup>

                <TextView
                    android:id="@+id/parameterNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/parameter_name_message"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/parameterTypeGroup" />

                <Spinner
                    android:id="@+id/parameterNameSpinner"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/parameterNameText" />

                <EditText
                    android:id="@+id/newValue"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/new_value"
                    android:inputType="textPersonName"
                    android:text=""
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/parameterNameSpinner" />

                <Button
                    android:id="@+id/buttonSendRequest"
                    android:onClick="onSendingButtonClicked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/button_send_request"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/newValue" />

                <TextView
                    android:id="@+id/titleResponse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/response_title"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttonSendRequest" />

                <TextView
                    android:id="@+id/responses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text=""
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleResponse" />

            </android.support.constraint.ConstraintLayout>
        </ScrollView>

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

    </android.support.design.widget.CoordinatorLayout>

    <include layout="@layout/navigation"/>

</android.support.v4.widget.DrawerLayout>
