<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.emse.com.cps2_android_app.SettingsActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <CheckBox
                    android:id="@+id/unique_server_check"
                    android:onClick="onCheckboxClicked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/unique_server_checkbox"
                    app:layout_constraintStart_toStartOf="@+id/mqtt_host"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/mqtt_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/mqtt_host"
                    app:layout_constraintStart_toStartOf="@+id/mqtt_host"
                    app:layout_constraintTop_toBottomOf="@+id/unique_server_check" />

                <EditText
                    android:id="@+id/mqtt_host"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:hint="@string/mqtt_host"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mqtt_text" />

                <TextView
                    android:id="@+id/mongo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/mongo_host"
                    app:layout_constraintStart_toStartOf="@id/mongo_host"
                    app:layout_constraintTop_toBottomOf="@+id/mqtt_host" />

                <EditText
                    android:id="@+id/mongo_host"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/mongo_host"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mongo_text" />

                <TextView
                    android:id="@+id/influx_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/influx_host"
                    app:layout_constraintStart_toStartOf="@id/influx_host"
                    app:layout_constraintTop_toBottomOf="@+id/mongo_host" />

                <EditText
                    android:id="@+id/influx_host"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/influx_host"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/influx_text" />

                <Button
                    android:id="@+id/buttonApplyHost"
                    android:onClick="onApplyButtonClicked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/button_apply_host"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/influx_host" />

            </android.support.constraint.ConstraintLayout>

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

    </android.support.design.widget.CoordinatorLayout>

    <include layout="@layout/navigation"/>

</android.support.v4.widget.DrawerLayout>
